# py-star-tsp

./: Makefile  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
examples/: README.md  demo_reference.py  quickstart.py
py_star_tsp/: __init__.py  commands.py  escpos_compat.py  exceptions.py  printer.py  raster.py  ref_page.py  status.py  text.py
py_star_tsp/printer/: README.md  printer.py  tsp100.py
tests/: test_commands.py  test_integration.py  test_printer.py  test_raster.py  test_status.py  test_text.py
