[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-star-tsp"
dynamic = ["version"]
description = "Python SDK for Star TSP100 Graphic Mode thermal printers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Pavel Kim", email = "hello@pavelkim.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Printing",
]
dependencies = [
    "pyusb>=1.3.0",
    "Pillow>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/printer-stream/py-star-tsp"

[tool.setuptools.dynamic]
version = {attr = "py_star_tsp.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
py_star_tsp = [
    "fonts/*.ttf",
    "fonts/*.otf",
    "img/*.png",
    "img/*.jpg",
    "img/*.jpeg",
    "img/*.bmp",
]
